# quiver-orm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONSUMER_ISSUES.md  Cargo.toml  LICENSE  README.md  example.quiver
.github/workflows/: ci.yml
crates/quiver-cli/: Cargo.toml
crates/quiver-cli/src/: main.rs
crates/quiver-codegen/: Cargo.toml
crates/quiver-codegen/src/: gen_fbs.rs  gen_proto.rs  gen_rust_client.rs  gen_rust_fbs.rs  gen_rust_proto.rs  gen_rust_serde.rs  gen_sql.rs  gen_typescript.rs  helpers.rs  lib.rs
crates/quiver-driver-core/: Cargo.toml
crates/quiver-driver-core/src/: arrow.rs  async_api.rs  async_client.rs  dialect.rs  generic_conn.rs  helpers.rs  lib.rs  pool.rs  sanitize.rs  stream.rs  types.rs
crates/quiver-driver-mysql/: Cargo.toml
crates/quiver-driver-mysql/src/: lib.rs  pool.rs
crates/quiver-driver-postgres/: Cargo.toml
crates/quiver-driver-postgres/src/: lib.rs  pool.rs
crates/quiver-driver-sqlite/: Cargo.toml
crates/quiver-driver-sqlite/src/: lib.rs  pool.rs
crates/quiver-driver-sqlite/tests/: client_integration.rs
crates/quiver-e2e/: Cargo.toml
crates/quiver-e2e/src/: lib.rs  tests.rs
crates/quiver-error/: Cargo.toml
crates/quiver-error/src/: lib.rs
crates/quiver-migrate/: Cargo.toml
crates/quiver-migrate/src/: diff.rs  introspect.rs  lib.rs  sql_gen.rs  step.rs  tracker.rs
crates/quiver-migrate/tests/: demo_real_world.rs  sqlite_integration.rs
crates/quiver-query/: Cargo.toml
crates/quiver-query/src/: arrow.rs  builder.rs  expr.rs  filter.rs  join.rs  lib.rs  nested.rs  paginate.rs  relation.rs  safe_ident.rs  stream.rs  validate.rs
crates/quiver-query/tests/: sqlite_integration.rs
crates/quiver-schema/: Cargo.toml
crates/quiver-schema/src/: ast.rs  lexer.rs  lib.rs  parser.rs  sql_types.rs  validate.rs
docs/: code-quality-audit.md  code-quality-findings.md  codelab.md  quiver-feedback.md  usage.md
scripts/: check-no-gitignored.sh
