[package]
name = "quiver-driver-postgres"
version = "0.1.0"
description = "PostgreSQL driver for Quiver ORM with ADBC support"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["orm", "arrow", "postgresql", "adbc"]
categories = ["database"]

[dependencies]
quiver-driver-core = { workspace = true }
quiver-error = { workspace = true }
adbc = { workspace = true }
adbc-postgres = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
quiver-schema = { workspace = true }
quiver-codegen = { workspace = true }
tokio-stream = { workspace = true }
