[package]
name = "quiver-e2e"
version = "0.1.0"
description = "End-to-end integration tests for Quiver ORM"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
quiver-schema = { workspace = true }
quiver-codegen = { workspace = true }
quiver-error = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
